Adding Game over in html, implemented collission

--- a/game.html
+++ b/game.html
@@ -15,23 +15,27 @@
     </ul>
 </div>
 
-<div id="username"></div>
-
 <div class="start">Start</div>
+<div class="game-over">Game Over</div>
+<div class="play-again">Play Again?</div>
 
 <div class="sky"></div>
-<div class="greenGrass"></div>
 
 <div class="character stand down" id="player">
-    <div class="head"></div>
+    <div class="user">
+        <div class="head"></div>
 
-    <div class="body"></div>
+        <div class="body"></div>
+    </div>
 
     <div class="weapon bow"></div>
 </div>
 
 <div class="alien" id="alien"></div>
-
+<div class="username">
+    <p>Username: <span></span></p>
+    <p>Bomb Count: <span></span></p>
+</div>
 
 </body>
 </html>
