Fixing bugs and changes

--- a/game.html
+++ b/game.html
@@ -35,6 +35,7 @@
 <div class="username">
     <p>Username: <span></span></p>
     <p>Bomb Count: <span></span></p>
+    <p>Level: <span></span></p>
 </div>
 
 </body>
